css/index.css
html {
  height: 100%;
  overflow: visible;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style: none;
  color: #fffafa;
}

body {
  background: #333;
  height: 100%;
  font-family: "Roboto Slab", sans-serif;
}

.container {
  width: 100%;
  padding: 0 15px;
  margin: 0 auto;
  max-width: 1140px;
}

/*////////////////////////////////////////////////////*/

/* COLOURS */
/*

#F15152 - Red-Orange
#A4303F - Light-matte-Red
#650D1B - Dark-Scarlet
#5299D3 - Caronlina-Blue
#247BA0 - Lapis-Lazuli
#cd5c5c - Button colours (light-red)

*/

/*////////////////////////////////////////////////////*/

/* ANIMATION TOOLS */

.fadeOpacity {
  opacity: 0;
}


/*////////////////////////////////////////////////////*/

/* NAVIGATION BAR */

#nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  font-size: 1.4rem;
  position: fixed;
  z-index: 99999;
  transition: .5s ease;
  background: #0000001a;
  height: 3.5rem;
}

nav ul {
  display: flex;
  justify-content: space-around;
  width: 32rem;
}

nav li {
  cursor: pointer;
}

/*////////////////////////////////////////////////////*/

/* LANDING PAGE */

#homeSection {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100%;
}

#bkgdHome {
  position: absolute;
  width: 100%;
  height: 100%;
  background: url("../images/17.jpg");
  background-position: center;
  background-size: cover;
  opacity: 0.6;
}

#homeContent {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  top: -3rem;
}

#name {
  color: snow;
  font-size: 8rem;
  font-weight: 700;
  text-transform: uppercase;
  width: 50rem;
  text-align: center;
  line-height: 8rem;
  margin: 0.5rem;
  text-shadow: 0 2px 1px rgba(0, 0, 0, 0.5);
}

#hrGroup {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 27rem;
  margin: 0 auto;
}

#hrGroup div {
  width: 1.1rem;
  height: 1.1rem;
  background: #dd4b4b;
  border-radius: 1rem;
  box-shadow: 0 1.5px 1px rgba(0, 0, 0, 0.35);
}

#homeContent hr {
  background: #f4f4f4;
  height: 0.25rem;
  width: 11rem;
  margin: 1rem auto;
  box-shadow: 0 1.5px 1px rgba(0, 0, 0, 0.35);
  border: none;
}

#homeContent p {
  margin: 0 auto;
  width: 33rem;
  text-align: center;
  font-size: 1.3rem;
  font-weight: 300;
  line-height: 1.8rem;
  text-shadow: 0 2px 1px rgba(0, 0, 0, 0.5);
}

#homeContent span {
  color: wheat;
}

#homeLinks {
  display: flex;
  width: 29rem;
  margin: 1.5rem 0 0 0;
}

.homeLink {
  background: #dd4b4b;
  padding: 0 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 12rem;
  height: 3.2rem;
  border-radius: .25rem;
  text-decoration: none;
  margin: 0 auto;
  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.5);
}

.homeLink:hover {
  background: #d16a6a;
}

#homeLinks p {
  font-size: 1.5rem;
  color: #fffafa;
  font-weight: 300;
}

/*////////////////////////////////////////////////////*/

/* ABOUT PAGE */

#aboutSection {
  background: #f03838; /* f03838 / db4d4d */
  height: 24rem;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  padding: 0 0 2.5rem 0;
  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
}

#aboutGroup {
  display: flex;
  flex-direction: row;
  align-items: center;
}

#portrait {
  background-image: url("../images/aboutMe/portrait1.JPG");
  width: 42rem;
  height: 16rem;
  background-position: -1.22rem -8rem;
  background-size: 25rem;
  z-index: 123;
  border-radius: .25rem;
  border: -1px solid #333;
  box-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#aboutText {
  text-align: justify;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
  font-size: 1.4rem;
  padding: 0 2rem;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#aboutText h1 {
  font-size: 2.5rem;
}

/* Mobile Features (Hidden) */

#btnGoToSkills, #nextSkill, #btnGoToProjects {
  display: none;
}

#btnGoToSkills {
  background: #da2b2b;
}

#btnGoToProjects {
  background: #bd2828;
}

/*////////////////////////////////////////////////////*/

/* SKILLS PAGE */

#skillsSection {
  background: #d33131; /* d33131 /  cb3a3a */
  height: 37rem;
}

#skillsTitle {
  text-align: center;
  font-size: 2.5rem;
  padding: 2rem 0 0 0;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#skillCardGroup {
  display: flex;
  align-items: center;
}

.skillCard {
  text-align: center;
  background: #bd2828; /* b12525 / a63030 */
  padding: 2rem;
  border-radius: .25rem;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#cssCard {
  margin: 0 1rem;
}

#htmlCardImg {
  background: url("../images/icons/iconHtml2.png");
  height: 7rem;
  width: 7rem;
  background-position: center;
  background-size: cover;
}

#cssCardImg {
  background: url("../images/icons/iconCss.png");
}

#jsCardImg {
  background: url("../images/icons/iconJavascript.png");
}

#cssCardImg, #jsCardImg {
  height: 7rem;
  width: 7rem;
  background-position: center;
  background-size: cover;
  border-radius: 100%;
  box-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

.skillCard h1 {
  margin: 1rem 0 0 0;
}

/* HR Groups */

#skillsSection hr {
  background: #f4f4f4;
  box-shadow: 0 1px 1px rgba(0,0,0,0.5);
  border: none;
  border-radius: .2rem;
}

#skillsHrGroup div, #skillCardHrGroup div {
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  box-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#skillsHrGroup, #skillCardHrGroup {
  display: flex;
  align-items: center;
}

#skillsHrGroup {
  margin: .2rem 0 2rem 0;
}

#skillsHrGroup div {
  background: #dd4b4b;
}

#skillsHrGroup hr {
  width: 19rem;
  height: .4rem;
  border-radius: .25;
  margin: 0 .5rem;
}

#skillCardHrGroup {
  margin: 0;
}

#skillCardHrGroup hr {
  width: 13rem;
}
/* ... */

